--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,4 @@
-/* All elements selected and specific HTML tags affected, including those in the body as well as a and p tags */
+/* All elements selected and specific HTML tags affected, including those in the body as well as a and p tags --> primarily we are adding some text and background color and adjusting the padding/margins. */
 * {
     box-sizing: border-box;
     padding: 0;
@@ -18,7 +18,7 @@ p {
     font-size: 16px;
 }
 
-/* Styling for the header */
+/* Styling for the header --> this includes the company logo as well as the appearance of the nav bar. */
 
 #header {
     padding: 20px;
@@ -64,7 +64,7 @@ p {
     background-position: center;
 }
 
-/* Styling for everything that falls within the main tag of the HTML document */
+/* Styling for everything that falls within the main tag of the HTML document -->  the images within each section are floated left or right, the main content is given padding/margins/etc., and content is displayed inline-block.*/
 
 .float-left {
     float: left;
@@ -82,9 +82,7 @@ p {
     margin-left: 20px;
 }
 
-.search-engine-optimization,
-.online-reputation-management,
-.social-media-marketing {
+.main-page-content {
     margin-bottom: 20px;
     padding: 50px;
     height: 300px;
@@ -93,20 +91,16 @@ p {
     color: #ffffff;
 }
 
-.search-engine-optimization img,
-.online-reputation-management img,
-.social-media-marketing img {
+.main-page-content img {
     max-height: 200px;
 }
 
-.search-engine-optimization h2,
-.online-reputation-management h2,
-.social-media-marketing h2 {
+.main-page-content h2 {
     margin-bottom: 20px;
     font-size: 36px;
 }
 
-/* Styling for the section on the right side of the webpage */
+/* Styling for the section on the right side of the webpage --> floats the container to the right, adds padding/margins, background-color, etc. */
 
 #benefits {
     margin-right: 20px;
@@ -119,29 +113,23 @@ p {
     background-color: #2589bd;
 }
 
-.benefit-lead,
-.benefit-brand,
-.benefit-cost {
+.side-bar {
     margin-bottom: 32px;
     color: #ffffff;
 }
 
-.benefit-lead h3,
-.benefit-brand h3,
-.benefit-cost h3 {
+.side-bar h3 {
     margin-bottom: 10px;
     text-align: center;
 }
 
-.benefit-lead img,
-.benefit-brand img,
-.benefit-cost img {
+.side-bar img {
     display: block;
     margin: 10px auto;
     max-width: 150px;
 }
 
-/* Styling for the footer of the wepbage */
+/* Styling for the footer of the wepbage --> formats the font, disregard floats, and adds padding */
 
 #footer {
     padding: 30px;
